# java-jni-haskell

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  stack-snapshot.yaml
fibhs/: BUILD.bazel  Fib.hs  Main.hs
fibjava/: BUILD.bazel
fibjava/src/main/java/fib/: FibMain.java
fibjni/: BUILD.bazel  FibJni.hs  Main.hs  init.c
openjdk/: BUILD.bazel  WORKSPACE
sed/: BUILD.bazel  WORKSPACE
