
# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library"
)

haskell_library(
    name = "lib",
    srcs = ["FibJni.hs", "@openjdk//:jni_header", "@openjdk//:jni_md_header"],
    deps = ["@stackage//:base", "@tweag_inline_java//jni:jni", "//fibhs:lib", "@openjdk//:lib"]
)

cc_binary(
    name = "libfib.so",
    srcs = ["init.c", ":lib", "@openjdk//:jni_header"],
    deps = [":lib"],
    linkstatic = False,
    linkshared = True,
   	visibility = ["//fibjava:__pkg__"]
)
