
# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library"
)

haskell_library(
    name = "lib",
    srcs = ["FibJni.hs"],
    deps = ["@stackage//:base", "@tweag_inline_java//jni:jni", "//fibhs:lib"]
)

cc_binary(
    name = "libfib.so",
    srcs = ["init.c"],
    deps = [":lib"],
    linkstatic = False,
    linkshared = True,
   	visibility = ["//fibjava:__pkg__"]
)
